@@ -1,148 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>Cyrine</groupId>
   <artifactId>AutomationPageObject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-
   <name>AutomationPageObject</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
- <dependencies>
-<dependency>
+  <dependencies>
 
-<groupId>junit</groupId>
+    <!-- JUnit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
 
-<artifactId>junit</artifactId>
+    <!-- TestNG -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.10.2</version>
+      <scope>test</scope>
+    </dependency>
 
-<version>4.12</version>
+    <!-- Cucumber + JUnit -->
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-junit</artifactId>
+      <version>7.9.0</version>
+      <scope>test</scope>
+    </dependency>
 
-<scope>test</scope>
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>7.9.0</version>
+    </dependency>
 
-</dependency>
+    <!-- Extent Reports -->
+    <dependency>
+      <groupId>tech.grasshopper</groupId>
+      <artifactId>extentreports-cucumber7-adapter</artifactId>
+      <version>1.9.2</version>
+    </dependency>
 
-<dependency>
+    <!-- Selenium -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.33.0</version>
+    </dependency>
 
-<groupId>io.cucumber</groupId>
+    <!-- WebDriver Manager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>5.5.3</version>
+      <scope>test</scope>
+    </dependency>
 
-<artifactId>cucumber-junit</artifactId>
+    <!-- Lombok (FIX Java 17) -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.30</version>
+      <scope>provided</scope>
+    </dependency>
 
-<version>7.9.0</version>
+  </dependencies>
 
-<scope>test</scope>
-
-</dependency>
-
-
-
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-<groupId>org.testng</groupId>
-<artifactId>testng</artifactId>
-<version>6.8.8</version>
-</dependency>
-
-
-
-<dependency>
-
-<groupId>io.cucumber</groupId>
-
-<artifactId>cucumber-java</artifactId>
-
-<version>7.9.0</version>
-
-</dependency>
-
-<!--https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
-
-
-		<dependency>
-
-			<groupId>tech.grasshopper</groupId>
-
-			<artifactId>extentreports-cucumber7-adapter</artifactId>
-
-			<version>1.9.2</version>
-
-		</dependency>
-
-
-		<dependency>
-
-			<groupId>org.seleniumhq.selenium</groupId>
-
-			<artifactId>selenium-java</artifactId>
-
-			<version>4.33.0</version>
-
-		</dependency>
-
-
-		<dependency>
-
-			<groupId>io.github.bonigarcia</groupId>
-
-			<artifactId>webdrivermanager</artifactId>
-
-			<version>5.5.3</version>
-
-			<scope>test</scope>
-
-		</dependency>
-
-	</dependencies>
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement>
       <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+
+        <!-- Clean plugin -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.4.0</version>
         </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+
+        <!-- Resources -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.3.1</version>
         </plugin>
+
+        <!-- Compiler plugin -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
+          <configuration>
+            <source>17</source>
+            <target>17</target>
+            <fork>true</fork>
+            <compilerArgs>
+              <!-- FIX Lombok + Java 17 -->
+              <arg>--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            </compilerArgs>
+          </configuration>
         </plugin>
+
+        <!-- Test execution -->
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.0</version>
         </plugin>
+
+        <!-- Jar -->
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.4.2</version>
         </plugin>
+
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
+
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>3.1.2</version>
         </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+
         <plugin>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.12.1</version>
         </plugin>
+
         <plugin>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
         </plugin>
+
       </plugins>
     </pluginManagement>
   </build>
+
 </project>
